Added in layout styling with unsemantic.

--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -1,33 +1,33 @@
-<div class="row">
-  <div class="right">
+<div class="row grid-100">
+  <div class="right grid-33">
     X
   </div>
-  <div class="right">
+  <div class="right grid-33">
     X
   </div>
-  <div class="">
-    X
-  </div>
-</div>
-<div class="row">
-  <div class="top right">
-    X
-  </div>
-  <div class="top right">
-    X
-  </div>
-  <div class="top">
+  <div class="grid -33">
     X
   </div>
 </div>
-<div class="row">
-  <div class="top right">
+<div class="row grid-100">
+  <div class="top right grid-33">
     X
   </div>
-  <div class="right top">
+  <div class="top right grid-33">
     X
   </div>
-  <div class="top">
+  <div class="top grid-33">
+    X
+  </div>
+</div>
+<div class="row grid-100">
+  <div class="top right grid-33">
+    X
+  </div>
+  <div class="right top grid-33">
+    X
+  </div>
+  <div class="top grid-33">
     X
   </div>
 </div>
