--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -1,33 +1,33 @@
 <div class="row grid-100">
   <div class="right grid-33">
-    X
+    {{board['1-1']}}
   </div>
   <div class="right grid-33">
-    X
+    {{board['1-2']}}
   </div>
   <div class="grid -33">
-    X
+    {{board['1-3']}}
   </div>
 </div>
 <div class="row grid-100">
   <div class="top right grid-33">
-    X
+    {{board['2-1']}}
   </div>
   <div class="top right grid-33">
-    X
+    {{board['2-2']}}
   </div>
   <div class="top grid-33">
-    X
+    {{board['2-3']}}
   </div>
 </div>
 <div class="row grid-100">
   <div class="top right grid-33">
-    X
+    {{board['3-1']}}
   </div>
   <div class="right top grid-33">
-    X
+    {{board['3-2']}}
   </div>
   <div class="top grid-33">
-    X
+    {{board['3-3']}}
   </div>
 </div>
