--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -1,33 +1,33 @@
 <div class="row grid-100">
-  <div class="right grid-33">
+  <div class="right grid-33" ng-click="changeMarker(1, 1)">
     {{board['1-1']}}
   </div>
-  <div class="right grid-33">
+  <div class="right grid-33" ng-click="changeMarker(1, 2)">
     {{board['1-2']}}
   </div>
-  <div class="grid -33">
+  <div class="grid -33" ng-click="changeMarker(1, 3)">
     {{board['1-3']}}
   </div>
 </div>
 <div class="row grid-100">
-  <div class="top right grid-33">
+  <div class="top right grid-33" ng-click="changeMarker(2, 1)">
     {{board['2-1']}}
   </div>
-  <div class="top right grid-33">
+  <div class="top right grid-33" ng-click="changeMarker(2, 2)">
     {{board['2-2']}}
   </div>
-  <div class="top grid-33">
+  <div class="top grid-33" ng-click="changeMarker(2, 3)">
     {{board['2-3']}}
   </div>
 </div>
 <div class="row grid-100">
-  <div class="top right grid-33">
+  <div class="top right grid-33" ng-click="changeMarker(3, 1)">
     {{board['3-1']}}
   </div>
-  <div class="right top grid-33">
+  <div class="right top grid-33" ng-click="changeMarker(3, 2)">
     {{board['3-2']}}
   </div>
-  <div class="top grid-33">
+  <div class="top grid-33" ng-click="changeMarker(3, 3)">
     {{board['3-3']}}
   </div>
 </div>
