Added a section to display the current winner of the game.

--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -31,3 +31,6 @@
     {{board['3-3']}}
   </div>
 </div>
+<div class="row grid-100" ng-show="board.winner">
+  The winner is.... {{board.winner}}
+</div>
