Added an idea to the first div to support a test.

--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -1,5 +1,5 @@
 <div class="row grid-100">
-  <div class="right grid-33" ng-click="changeMarker(1, 1)">
+  <div id="grid-11" class="right grid-33" ng-click="changeMarker(1, 1)">
     {{board['1-1']}}
   </div>
   <div class="right grid-33" ng-click="changeMarker(1, 2)">
